--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "## API Server",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --coverage",
-    "startDB": "mkdir -p ./db && mongod --dbpath ./db",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "watch": "nodemon index.js",
+    "test-watch": "jest --watchAll",
+    "test": "jest",
+    "jsdoc": "jsdoc -c ./docs/config/jsdoc.config.json",
+    "lint": "eslint **/*.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jest": "^24.9.0",
+    "jsdoc": "^3.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
     "morgan": "^1.9.1",
